# SharpClaw

./: .gitignore  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  README.md  SharpClaw.slnx  publish-modules.ps1  publish.ps1
.github/: CONTRIBUTING.md  README.md
DefaultModules/: Directory.Build.props  Directory.Build.targets
SharpClaw.Application.API/: BundledModuleStorageGateway.cs  DatabaseInitializationGate.cs  ModuleStorageTelemetry.cs  Program.cs  SharpClaw.Application.API.csproj
SharpClaw.Application.Core/: CorePackageDependency.cs  GlobalUsings.cs  SharpClaw.Application.Core.csproj
SharpClaw.Application.Infrastructure/: InfrastructureServiceExtensions.cs  SharpClaw.Application.Infrastructure.csproj
SharpClaw.Application.Infrastructure.Tasks/: SharpClaw.Application.Infrastructure.Tasks.csproj
SharpClaw.Client.Uno/: App.xaml.cs  GlobalUsings.cs  Package.appxmanifest  SharpClaw.Client.Uno.csproj
SharpClaw.Contracts/: SharpClaw.Contracts.csproj
SharpClaw.Gateway/: Program.cs  SharpClaw.Gateway.csproj
SharpClaw.Gateway.Abstractions/: GatewayEndpointGroup.cs  IGatewayDispatcher.cs  IGatewayEndpointGroupBuilder.cs  IGatewayInternalApi.cs  IGatewayModuleExtension.cs  QueuedResponse.cs
SharpClaw.Migrations.Postgres/: DesignTimeFactory.cs  SharpClaw.Migrations.Postgres.csproj
SharpClaw.Migrations.SQLite/: DesignTimeFactory.cs  SharpClaw.Migrations.SQLite.csproj
SharpClaw.Uno/: App.xaml.cs  (+1 more)
sdk/python/sharpclaw-module-host/: pyproject.toml
sdk/python/sharpclaw-module-host/src/sharpclaw_module_host/: __init__.py  host.py
(+767 files in other folders)
