[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharpclaw-module-host"
version = "0.1.0b0"
description = "Host wrapper for SharpClaw Python sidecar modules."
requires-python = ">=3.11"
license = "LicenseRef-SharpClaw"

[tool.hatch.build.targets.wheel]
packages = ["src/sharpclaw_module_host"]
